# SPLN2223

TP1/: .gitignore  README.md  analyse.py  analysis.py  app.py  create_json.py  docker-compose.yml  flake.nix  pyproject.toml  setup.py
TP1/static/: my.css  reviews.js
TP1/templates/: add.html  base.html  edit.html  review.html  reviews.html
TP2/: .gitignore  devenv.nix  requirements.txt
TPC1/: flake.nix  parser.py
TPC2/: exemplo.txt  flake.nix  parser.py
